--- a/NLP/5_lemmatzation.ipynb
+++ b/NLP/5_lemmatzation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -213,6 +213,251 @@
    "source": [
     "for token in data:\n",
     "    print(f\"{token.vector}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "words = [\n",
+    "    \"leaves\", \"runs\", \"score\", \"herd\", \"animals\", \"fruits\"\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test = spacy.load(\"en_core_web_sm\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Processing the list of words"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "[E1041] Expected a string, Doc, or bytes as input, but got: <class 'list'>",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[19]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m doc = \u001b[43mtest\u001b[49m\u001b[43m(\u001b[49m\u001b[43mwords\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/miniconda3/lib/python3.12/site-packages/spacy/language.py:1041\u001b[39m, in \u001b[36mLanguage.__call__\u001b[39m\u001b[34m(self, text, disable, component_cfg)\u001b[39m\n\u001b[32m   1020\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34m__call__\u001b[39m(\n\u001b[32m   1021\u001b[39m     \u001b[38;5;28mself\u001b[39m,\n\u001b[32m   1022\u001b[39m     text: Union[\u001b[38;5;28mstr\u001b[39m, Doc],\n\u001b[32m   (...)\u001b[39m\u001b[32m   1025\u001b[39m     component_cfg: Optional[Dict[\u001b[38;5;28mstr\u001b[39m, Dict[\u001b[38;5;28mstr\u001b[39m, Any]]] = \u001b[38;5;28;01mNone\u001b[39;00m,\n\u001b[32m   1026\u001b[39m ) -> Doc:\n\u001b[32m   1027\u001b[39m \u001b[38;5;250m    \u001b[39m\u001b[33;03m\"\"\"Apply the pipeline to some text. The text can span multiple sentences,\u001b[39;00m\n\u001b[32m   1028\u001b[39m \u001b[33;03m    and can contain arbitrary whitespace. Alignment into the original string\u001b[39;00m\n\u001b[32m   1029\u001b[39m \u001b[33;03m    is preserved.\u001b[39;00m\n\u001b[32m   (...)\u001b[39m\u001b[32m   1039\u001b[39m \u001b[33;03m    DOCS: https://spacy.io/api/language#call\u001b[39;00m\n\u001b[32m   1040\u001b[39m \u001b[33;03m    \"\"\"\u001b[39;00m\n\u001b[32m-> \u001b[39m\u001b[32m1041\u001b[39m     doc = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_ensure_doc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtext\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   1042\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m component_cfg \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m   1043\u001b[39m         component_cfg = {}\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/miniconda3/lib/python3.12/site-packages/spacy/language.py:1135\u001b[39m, in \u001b[36mLanguage._ensure_doc\u001b[39m\u001b[34m(self, doc_like)\u001b[39m\n\u001b[32m   1133\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(doc_like, \u001b[38;5;28mbytes\u001b[39m):\n\u001b[32m   1134\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m Doc(\u001b[38;5;28mself\u001b[39m.vocab).from_bytes(doc_like)\n\u001b[32m-> \u001b[39m\u001b[32m1135\u001b[39m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(Errors.E1041.format(\u001b[38;5;28mtype\u001b[39m=\u001b[38;5;28mtype\u001b[39m(doc_like)))\n",
+      "\u001b[31mValueError\u001b[39m: [E1041] Expected a string, Doc, or bytes as input, but got: <class 'list'>"
+     ]
+    }
+   ],
+   "source": [
+    "doc = test(words)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Creating a document"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "leaves\n",
+      "runs\n",
+      "score\n",
+      "herd\n",
+      "animals\n",
+      "fruits\n"
+     ]
+    }
+   ],
+   "source": [
+    "for word in words:\n",
+    "    print(word)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[leaves, runs, score, herd, animals, fruits]\n"
+     ]
+    }
+   ],
+   "source": [
+    "doc = [test(word) for word in words]\n",
+    "print(doc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['leaves', 'runs', 'score', 'herd', 'animals', 'fruits']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(words)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "leaves ---> leave\n",
+      "leaves ----> [ 0.4924931   2.2020779   0.31966546 -0.7797521  -0.10536297 -0.106049\n",
+      "  0.43947485  0.32654023  0.08719584 -0.4254694   0.6428936   0.1147235\n",
+      " -0.812016   -0.8439969   0.10417897  0.9729058  -0.44364744  0.18195981\n",
+      "  0.5331363  -1.0147204  -0.9483166  -0.27225295  0.10001919  0.83935255\n",
+      "  0.26144576  0.3221225   0.1426468   1.0832872  -0.6848917   0.33652273\n",
+      "  0.23366852  1.0012497  -0.31175587 -0.21791759 -0.67005515 -1.0560172\n",
+      " -0.41646564  1.065892   -1.0733864  -0.73570323  2.0223799  -0.49231383\n",
+      " -1.1722456  -0.29852766  0.7120782  -0.52727157  0.26968938  0.19943519\n",
+      " -0.9763438  -0.6177155   0.13696712 -1.0389272  -0.6412243  -0.65535635\n",
+      " -0.711951    2.1530333   0.26980746 -0.60826814 -0.391127    0.9150435\n",
+      "  0.04810058  1.2832067  -0.11200826 -0.41633657  0.57141507  1.632292\n",
+      "  0.42359066 -0.8593042  -0.15545064  0.45339805  1.1864156   1.1760815\n",
+      "  0.29925007  1.41349     0.31654468 -0.00497454  0.23762262 -1.1163428\n",
+      " -1.5897931  -0.38567984  0.37862098  0.10009664 -0.90860856  0.2563903\n",
+      " -0.10134107  0.527159   -1.023286    0.5878149   0.0478317  -0.19231324\n",
+      " -0.4295732   0.05858105  0.17052919 -0.46565214 -0.37275982 -0.5172605 ]\n",
+      "runs ---> run\n",
+      "runs ----> [ 0.04024211  1.3684989   0.1249119  -0.11390519  0.53304285 -0.4483658\n",
+      "  0.14192761  1.0081286   0.10942205 -0.72678804  0.2932177  -0.30309615\n",
+      " -1.0657763  -0.26558483 -0.11504818  1.6420889  -0.86877835 -0.05126628\n",
+      "  0.3290938  -0.7238591  -0.87446195 -0.44888657 -0.63343585  0.06743643\n",
+      "  0.27508482  0.2688973   0.6447589   0.1106882  -0.6734181  -0.53928584\n",
+      " -0.05487166  1.8631666  -0.47025692  0.6242157  -0.6703694  -0.70109165\n",
+      " -0.32214066  0.44283104  0.24370083 -0.40500313  1.6886804   0.13161145\n",
+      " -0.8580318  -0.23869881  0.5348454   0.28356323  1.0602734  -0.9307649\n",
+      " -0.60351455 -0.40737504  0.06066124 -0.06308645 -0.6834729  -0.3401406\n",
+      " -0.3746292   1.7571914   0.4340519  -0.4719857  -0.12150644  0.77924496\n",
+      " -0.3042831   0.7806805  -0.3402562  -0.36398044  0.74442744  1.1962764\n",
+      "  0.5491628  -0.86164045 -0.5561961   0.83084613  0.5457269   0.34985262\n",
+      "  1.0232279   0.28892064  0.21230716 -0.05172154 -0.16421138 -0.65635204\n",
+      " -1.5744882  -0.7275625  -0.19322997 -0.49457085 -0.8401584   0.6294626\n",
+      "  0.46298912  1.7780814  -0.898901   -0.03699001 -0.3064242  -0.4647532\n",
+      "  0.3778122  -0.02701259 -0.08463975  0.27101868 -0.82329404  0.08919755]\n",
+      "score ---> score\n",
+      "score ----> [-1.2577825  -0.43630075  0.75462437 -0.92184025 -0.5847533   0.10819581\n",
+      " -0.13134545  0.84170926 -0.59576076  0.14789668  0.50010157 -0.3746752\n",
+      " -0.83989656  0.6919457   0.0028175   0.2300722  -0.19385055 -1.2487736\n",
+      "  1.0922034  -1.1044583  -0.99134254  0.9824336  -0.94636357 -0.34424537\n",
+      "  0.17737043  0.48300081  0.1395604   1.4728217  -1.151622    0.22854187\n",
+      " -0.8710953   1.0540766   0.0958288   0.7500563  -0.07928965 -0.99861646\n",
+      " -0.6443349  -0.14217162  0.7791041  -1.1104094  -0.0713715   0.529418\n",
+      "  0.5182973  -0.16278255  0.08005568 -0.1931274   0.21588127  1.3802197\n",
+      " -0.74088436 -0.656829    0.94006497 -0.40981832 -0.3963823  -0.30317286\n",
+      "  0.21534395  1.2239555   0.33814663 -0.03039902  0.13996814  0.31108597\n",
+      " -0.8731798   1.0317543  -0.15963835 -0.44317204  0.8876606   0.06966873\n",
+      "  1.7014873  -0.46762854  0.12577617  0.00686914 -0.2918279   0.91455185\n",
+      "  0.8585021  -0.01221964 -0.49912894 -0.01124167  0.3042567   0.7546642\n",
+      " -1.2088056  -0.09035783 -0.3540737   1.4317183  -0.56873006  0.13721798\n",
+      "  0.8984855   0.57923967 -0.5916144  -0.4239313   0.09281409  0.50458986\n",
+      " -0.23716521  0.04336208  0.41899627  0.01249154 -0.4334424   0.48938018]\n",
+      "herd ---> herd\n",
+      "herd ----> [-6.9333506e-01 -1.0980732e+00  1.3172495e-01 -2.3436084e-01\n",
+      "  1.0050403e-01 -2.2474690e-01  7.8614569e-01  4.3067461e-01\n",
+      " -6.1609900e-01  1.2777469e-01  6.6906041e-01 -6.3814923e-02\n",
+      " -6.3301539e-01  1.1575663e-01 -1.0566920e+00  1.0750803e-01\n",
+      " -3.4933710e-01 -7.7038890e-01  1.4163160e+00 -6.8781704e-01\n",
+      " -1.1454140e+00  1.5780913e+00 -4.9906832e-01 -2.7475095e-01\n",
+      "  1.1714623e+00 -2.0565823e-02  5.2370906e-01 -1.7842200e-01\n",
+      " -7.1311301e-01  1.9366405e+00 -5.0293183e-01 -3.2137670e-02\n",
+      "  1.3701475e-01  8.1830788e-01 -9.9036366e-02 -6.2939823e-01\n",
+      " -8.2671031e-02  9.1098213e-01 -4.1825145e-02 -8.7825972e-01\n",
+      " -1.7526090e-01 -4.9124885e-01  5.4383147e-01  3.9519739e-01\n",
+      " -1.9767903e-01  1.6356899e-01 -2.6475367e-01  1.9333495e-01\n",
+      " -2.4345398e-01 -5.2211249e-01  8.6780751e-01 -1.5119678e-01\n",
+      "  7.1398288e-02 -4.5864347e-01 -1.7576808e-01  2.6415834e-01\n",
+      "  1.3347929e+00  1.4373207e-01  1.1950037e-01  3.8522419e-01\n",
+      " -9.1808510e-01  1.2478399e-01 -7.8196120e-01 -4.2917740e-01\n",
+      "  4.5224375e-01  9.7806662e-02  1.2225609e+00  3.1566203e-01\n",
+      " -1.1643806e+00 -2.1152814e-01 -4.8571050e-01  8.4354103e-01\n",
+      "  5.4319632e-01  3.3370396e-01 -1.3146222e-01 -1.2161821e-01\n",
+      " -3.5086131e-01 -1.2120858e-01 -5.4308993e-01 -1.1179686e-02\n",
+      "  3.0426776e-01  3.1092376e-02 -4.9866122e-01  1.3887435e-03\n",
+      " -3.7729111e-01  5.4170150e-01  3.7176257e-01 -4.1285217e-02\n",
+      " -4.9117896e-01  6.2491220e-01 -7.9126477e-01  7.0922565e-01\n",
+      "  1.8170643e+00 -3.0894598e-01  2.7481869e-02  5.4672414e-01]\n",
+      "animals ---> animal\n",
+      "animals ----> [-0.74763197  0.91888094  0.02940956 -0.81970465  0.6737856  -0.50986814\n",
+      "  1.7225977   0.8198882  -0.04741478 -0.46710902 -0.74607617 -0.29005882\n",
+      " -0.39486533  0.19594514 -0.3249116   0.6050087  -0.07398634  0.01834652\n",
+      " -0.45160538  0.05346686 -0.30002585 -0.2627741   0.00309679  0.10007191\n",
+      "  0.5340767   0.31316128  0.7313424   0.14857131 -0.6426829   0.93087316\n",
+      "  0.25985953  0.9822007  -0.8666665  -0.03917041  0.4541967  -1.0192729\n",
+      " -0.68857884  0.7253431   0.67534167  0.66857433 -0.3441849  -0.31735033\n",
+      " -0.46086782 -0.20216662  0.44065642 -0.11897629 -0.3122117   0.5447013\n",
+      " -0.2998428  -0.7169504  -0.3164848  -0.4947442   0.08062292 -0.7965962\n",
+      "  0.03181562  0.05106594  1.3894196  -0.17612216 -0.5501546   0.35238504\n",
+      " -1.4404064   0.05272479  0.01151058 -0.72357947  0.5211513   1.2306275\n",
+      "  0.08846664 -0.08042796 -0.6494275   0.23082575  0.1634841   0.05983222\n",
+      " -0.4593868   1.0677764   0.19443008 -0.20063281  0.42678827 -0.790411\n",
+      " -0.89709175  0.01176712 -0.5359838  -0.728922   -0.2508288   0.31392616\n",
+      " -0.00692579  1.0807431  -0.37523383  0.7578139   0.21569446  0.08843282\n",
+      " -0.6681272   0.68937784  0.7706626  -0.11646983 -0.8262273  -0.61828387]\n",
+      "fruits ---> fruit\n",
+      "fruits ----> [-0.7954931   1.5086393   0.2641577   0.11151285  0.9458548  -1.053907\n",
+      "  1.7245588   0.74150527  0.31704265 -0.03317787 -0.37209773 -0.4972831\n",
+      " -0.4715297   0.17803216 -0.15570968  0.9677423  -0.95594585  0.21080847\n",
+      " -0.02363971 -0.08387107 -1.0743406  -0.5666334  -0.32466057  0.39427376\n",
+      "  0.47228336  0.34319732  0.43858436 -0.47394857 -0.48616132  0.6766319\n",
+      " -0.174443    0.7272974  -1.0276682   0.37530744 -0.40609455 -0.24678376\n",
+      " -0.3339527   1.0096796  -0.52367425  0.26075158 -0.9414275  -0.50807995\n",
+      " -0.08935538 -0.52760684  0.11833343 -0.3690419   0.12116766 -0.49087217\n",
+      " -0.4042321  -0.63807684  0.29302663 -0.6870128   0.30392984 -0.17123237\n",
+      " -0.8249335   1.2672683   1.4673456  -0.06471995 -0.38295302  0.18357769\n",
+      " -0.63080466 -0.25938094  0.0236838  -0.03671786 -0.03971517  1.6559318\n",
+      "  0.28325132 -0.6365788  -0.42940444 -0.79305553  0.5176191   0.4094049\n",
+      "  0.4025507   1.0139318  -0.43291542  0.06838435  0.02300156 -0.03221163\n",
+      " -1.8323468   0.5283841   0.10383904 -0.19244707 -0.12007418  0.6537814\n",
+      " -0.1822342   1.6630731  -1.016059    0.5043559  -0.38225606 -0.31261063\n",
+      " -0.7435814  -0.43066466  1.7906548  -0.10222913 -0.6464972  -0.9595231 ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for word in doc:\n",
+    "    # print(word)\n",
+    "    for data in word:\n",
+    "        print(f\"{data} ---> {data.lemma_}\")\n",
+    "        print(f\"{data} ----> {data.vector}\")"
    ]
   }
  ],
