--- a/NLP/text-and-semantics/embeddings.ipynb
+++ b/NLP/text-and-semantics/embeddings.ipynb
@@ -338,7 +338,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
